--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,4 +1,4 @@
-.clients-list {
+/*.clients-list {
   display: flex;
   justify-content: space-between;
 }
@@ -29,3 +29,4 @@
     cursor: pointer;
   }
 }
+*/
