--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,4 +1,4 @@
-.footer {
+/*.footer {
   background: #2f303a;
   .footer-container {
     display: flex;
@@ -113,3 +113,4 @@
     fill: white;
   }
 }
+*/
