--- a/sass/components/_about-us.scss
+++ b/sass/components/_about-us.scss
@@ -1,4 +1,4 @@
-.about-us-section {
+/*.about-us-section {
   padding-bottom: 0;
 }
 
@@ -42,3 +42,4 @@
   margin-top: 0px;
   margin-bottom: 0px;
 }
+*/
