--- a/sass/components/_footer-social-links.scss
+++ b/sass/components/_footer-social-links.scss
@@ -1,36 +1,116 @@
-.footer-social-links-list {
-  display: flex;
-}
+/*.footer {
+  background: #2f303a;
+  .footer-container {
+    display: flex;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
 
-.footer-social-links-item:not(:last-child) {
-  margin-right: 10px;
-}
+  &-block {
+    width: 270px;
+  }
 
-.footer-social-icons {
-  width: 20px;
-  height: 20px;
-  fill: currentColor;
-}
+  &-block:not(:last-child) {
+    margin-right: 30px;
+  }
 
-.footer-social-links-link {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  color: $title-dark-theme-color;
-  width: 44px;
-  height: 44px;
-  border-radius: 22px;
+  &-adress-item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 
-  background-color: rgba(255, 255, 255, 0.1);
-  background-repeat: no-repeat;
-  background-position: center;
+  &-adress {
+    color: $title-dark-theme-color;
+  }
 
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: $timing-function;
-  &:hover,
-  &:focus {
-    background-color: $accent-color;
-    cursor: pointer;
+  &-tel,
+  &-email {
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  &-title {
+    display: block;
+    margin-top: 12px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.15;
+
+    text-transform: uppercase;
+
+    color: $title-dark-theme-color;
+  }
+  .footer-social-links-list {
+    display: flex;
+  }
+
+  .footer-social-links-item:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  .footer-social-icons {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+  }
+
+  .footer-social-links-link {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: $title-dark-theme-color;
+    width: 44px;
+    height: 44px;
+    border-radius: 22px;
+
+    background-color: rgba(255, 255, 255, 0.1);
+    background-repeat: no-repeat;
+    background-position: center;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: $timing-function;
+    &:hover,
+    &:focus {
+      background-color: $accent-color;
+      cursor: pointer;
+    }
+  }
+
+  &-subscribe-form {
+    display: flex;
+  }
+
+  &-block:last-child {
+    width: auto;
+  }
+
+  &-email-input {
+    width: 358px;
+    height: 50px;
+
+    padding-left: 16px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-right: 27px;
+
+    color: $text-light-theme-color;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+    background-color: transparent;
+  }
+
+  &-button {
+    display: flex;
+  }
+
+  &-button-icon {
+    margin-left: 10px;
+    margin-right: 11px;
+    fill: white;
   }
 }
+*/
