--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,4 +1,77 @@
 .header-container {
+  position: relative;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.navigation {
+  display: none;
+}
+
+.header-adress {
+  display: none;
+}
+
+.menu-btn:focus,
+.menu-btn:hover {
+  fill: $accent-color;
+}
+
+.menu-wrapper {
+  position: absolute;
+  transform: translateX(-100%);
+  top: 100%;
+  right: 0%;
+  width: 100%;
+
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  background-color: #fff;
+
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: $timing-function;
+}
+
+.menu-wrapper.is-open {
+  display: block;
+  transform: translateX(0);
+}
+
+.menu-btn {
+  &.is-open {
+    .icon-close {
+      display: block;
+    }
+    .icon-burger {
+      display: none;
+    }
+  }
+}
+
+.icon-burger {
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.icon-close {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: flex;
+  }
+
+  .header-adress {
+    display: flex;
+  }
+
+  .menu-btn {
+    display: none;
+  }
 }
