--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,32 +1,51 @@
-.hero {
-  height: 600px;
-  max-width: 1600px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
+/*.navigation {
+  display: flex;
+  align-items: center;
+}
 
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.8),
-      rgba(47, 48, 58, 0.8)
-    ),
-    url(../images/Hero-img.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: black;
+.navigation-list {
+  display: flex;
+  &-item:not(:last-child) {
+    margin-right: 50px;
+  }
+  &-link {
+    padding-top: 32px;
+    padding-bottom: 0px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 
-  &-title {
-    margin: 0px;
-    padding-top: 200px;
-    padding-bottom: 30px;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    color: $title-light-theme-color;
 
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
+    transition-property: color, background-color;
+    transition-duration: 250ms;
+    transition-timing-function: $timing-function;
+  }
 
-    color: $title-dark-theme-color;
+  &-link::after {
+    display: block;
+    margin-top: 28px;
+    width: auto;
+    height: 4px;
+    background-color: $accent-color;
+    content: "";
+    border-radius: 2px;
+    opacity: 0;
+
+    transition-property: opacity;
+    transition-duration: 250ms;
+    transition-timing-function: $timing-function;
+  }
+
+  &-link:focus::after,
+  &-link:hover::after {
+    opacity: 1;
+  }
+
+  &-link:focus,
+  &-link:hover {
+    color: $accent-color;
   }
 }
+*/
