--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 @import "./utils/variables";
 @import "./utils/modal-btn";
 @import "./utils/is-hidden";
-@import "./utils/basicstyle";
+@import "./base/common";
+@import "./base/container";
 @import "./components/logo";
 @import "./components/header";
 @import "./components/header-navigation";
@@ -14,3 +15,7 @@
 @import "./components/footer";
 @import "./components/modal";
 @import "./components/portfolio";
+
+.df {
+  width: 111px;
+}
