--- a/css/main.css
+++ b/css/main.css
@@ -63,12 +63,19 @@ input {
 
 .section-header {
   margin-top: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-header {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 
 .container {
@@ -117,6 +124,12 @@ input {
   color: white;
 }
 
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 81px;
+  }
+}
+
 .header-container {
   position: relative;
   display: -webkit-box;
@@ -128,6 +141,8 @@ input {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-line-pack: center;
+      align-content: center;
   padding-top: 10px;
   padding-bottom: 10px;
 }
@@ -147,8 +162,8 @@ input {
 
 .menu-wrapper {
   position: absolute;
-  -webkit-transform: translateX(-100%);
-          transform: translateX(-100%);
+  -webkit-transform: translateX(-200%);
+          transform: translateX(-200%);
   top: 100%;
   right: 0%;
   width: 100%;
@@ -163,6 +178,8 @@ input {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 
 .menu-wrapper.is-open {
@@ -189,6 +206,21 @@ input {
 }
 
 @media screen and (min-width: 768px) {
+  .header-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
   .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -264,7 +296,7 @@ input {
   color: #2196f3;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .navigation {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -277,9 +309,11 @@ input {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    height: 80px;
   }
   .navigation-list-item:not(:last-child) {
     margin-right: 50px;
+    margin-bottom: 0px;
   }
   .navigation-list-link {
     padding-top: 32px;
@@ -288,26 +322,7 @@ input {
     line-height: 1.14;
   }
   .navigation-list-link::after {
-    display: block;
     margin-top: 28px;
-    width: auto;
-    height: 4px;
-    background-color: #2196f3;
-    content: "";
-    border-radius: 2px;
-    opacity: 0;
-    -webkit-transition-property: opacity;
-    transition-property: opacity;
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .navigation-list-link:focus::after, .navigation-list-link:hover::after {
-    opacity: 1;
-  }
-  .navigation-list-link:focus, .navigation-list-link:hover {
-    color: #2196f3;
   }
 }
 
@@ -362,6 +377,26 @@ input {
   color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .header-adress {
+    margin-left: auto;
+  }
+  .header-adress-list-item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+  .header-adress-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 12px;
+    line-height: 1.14;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .header-adress {
     margin-left: auto;
@@ -370,93 +405,131 @@ input {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    font-weight: 400;
-    font-style: normal;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em;
-    fill: #757575;
   }
   .header-adress-list-item:not(:last-child) {
     margin-right: 30px;
-  }
-  .header-adress-list-icon {
-    width: 16px;
-    height: 16px;
-    fill: currentColor;
-    margin-right: 10px;
+    margin-bottom: 0px;
   }
   .header-adress-link {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    color: #757575;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 250ms;
-            transition-duration: 250ms;
-  }
-  .header-adress-link:focus, .header-adress-link:hover {
-    color: #2196f3;
   }
 }
 
-/*.navigation {
-  display: flex;
-  align-items: center;
+.active-page {
+  color: #2196f3;
+  padding-bottom: 0px;
 }
 
-.navigation-list {
-  display: flex;
-  &-item:not(:last-child) {
-    margin-right: 50px;
-  }
-  &-link {
-    padding-top: 32px;
-    padding-bottom: 0px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+.active-page::after {
+  display: block;
+  margin-top: 28px;
+  width: auto;
+  height: 4px;
+  background-color: #2196f3;
+  content: "";
+  border-radius: 2px;
+  opacity: 1;
+}
 
-    color: $title-light-theme-color;
+.hero {
+  height: 400px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8)));
+  background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8));
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: black;
+}
 
-    transition-property: color, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
-  }
+.hero-title {
+  margin: 0px;
+  padding-top: 118px;
+  padding-bottom: 30px;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.62;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
 
-  &-link::after {
-    display: block;
-    margin-top: 28px;
-    width: auto;
-    height: 4px;
-    background-color: $accent-color;
-    content: "";
-    border-radius: 2px;
-    opacity: 0;
-
-    transition-property: opacity;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
-  }
-
-  &-link:focus::after,
-  &-link:hover::after {
-    opacity: 1;
-  }
-
-  &-link:focus,
-  &-link:hover {
-    color: $accent-color;
+@media screen and (min-width: 480px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-mobile.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-mobile.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
   }
 }
-*/
-/*.about-us-section {
+
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-width: 480px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-mobile@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-mobile@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 400px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-tablet.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-tablet.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-width: 768px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-tablet@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-tablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-desktop.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-desktop.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
+  }
+  .hero-title {
+    padding-top: 200px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-width: 1208px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-desktop@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-desktop@2x.jpg);
+  }
+}
+
+.about-us-section {
+  padding-top: 60px;
   padding-bottom: 0;
+}
+
+.about-us-icon {
+  width: 70px;
+  height: 70px;
 }
 
 .about-us-list-header {
@@ -466,24 +539,20 @@ input {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-
-  color: $title-light-theme-color;
-}
-
-.about-us-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.about-us-list-item {
-  width: 270px;
+  color: #212121;
 }
 
 .about-us-list-img-block {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 270px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
   height: 120px;
   background: #f5f4fa;
   border-radius: 4px;
@@ -491,117 +560,238 @@ input {
   background-position: center;
 }
 
-.about-us-icon {
-  width: 70px;
-  height: 70px;
-}
 .about-us-list-text {
   margin-top: 0px;
   margin-bottom: 0px;
 }
-*/
-/*.navigation {
-  display: flex;
-  align-items: center;
-}
 
-.navigation-list {
-  display: flex;
-  &-item:not(:last-child) {
-    margin-right: 50px;
-  }
-  &-link {
-    padding-top: 32px;
-    padding-bottom: 0px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-
-    color: $title-light-theme-color;
-
-    transition-property: color, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
-  }
-
-  &-link::after {
-    display: block;
-    margin-top: 28px;
+@media screen and (min-width: 480px) {
+  .about-us-list-item:not(:last-child) {
     width: auto;
-    height: 4px;
-    background-color: $accent-color;
-    content: "";
-    border-radius: 2px;
-    opacity: 0;
-
-    transition-property: opacity;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
+    padding-bottom: 30px;
   }
-
-  &-link:focus::after,
-  &-link:hover::after {
-    opacity: 1;
-  }
-
-  &-link:focus,
-  &-link:hover {
-    color: $accent-color;
+  .about-us-list-header {
+    text-align: center;
   }
 }
-*/
-/*.navigation {
-  display: flex;
-  align-items: center;
+
+@media screen and (min-width: 768px) {
+  .about-us-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .about-us-list-item {
+    width: 354px;
+  }
+  .about-us-list-header {
+    text-align: start;
+  }
+  .about-us-list-item:nth-child(2n-1) {
+    margin-right: 30px;
+  }
+  .about-us-list-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
 }
 
-.navigation-list {
-  display: flex;
-  &-item:not(:last-child) {
-    margin-right: 50px;
+@media screen and (min-width: 1200px) {
+  .about-us-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
-  &-link {
-    padding-top: 32px;
-    padding-bottom: 0px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-
-    color: $title-light-theme-color;
-
-    transition-property: color, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
+  .about-us-list-item {
+    width: 270px;
+    margin-right: 30px;
   }
+  .about-us-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .about-us-list-img-block {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 270px;
+    height: 120px;
+    background: #f5f4fa;
+    border-radius: 4px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
 
-  &-link::after {
+.what-we-do {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .what-we-do-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .what-we-do-list-img {
     display: block;
-    margin-top: 28px;
-    width: auto;
-    height: 4px;
-    background-color: $accent-color;
-    content: "";
-    border-radius: 2px;
-    opacity: 0;
-
-    transition-property: opacity;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
   }
-
-  &-link:focus::after,
-  &-link:hover::after {
-    opacity: 1;
+  .what-we-do-list-item {
+    position: relative;
   }
-
-  &-link:focus,
-  &-link:hover {
-    color: $accent-color;
+  .what-we-do-list-name {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.17;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: rgba(47, 48, 58, 0.8);
   }
 }
-*/
+
+.our-team-social-links {
+  width: 44px;
+  height: 44px;
+  border-radius: 22px;
+}
+
+.our-team-social-links-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.our-team-social-links:not(:last-child) {
+  margin-right: 10px;
+}
+
+.our-team-social-links-item {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: #afb1b8;
+  -webkit-transition-property: fill, background-color;
+  transition-property: fill, background-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-team-social-links-item:hover, .our-team-social-links-item:focus {
+  fill: #fff;
+  background-color: #2196f3;
+  cursor: pointer;
+}
+
+.our-team-social-links-icon {
+  width: 20px;
+  height: 20px;
+}
+
+.our-team-list-item {
+  max-width: 480px;
+  padding-bottom: 24px;
+  margin-bottom: 30px;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.our-team-list-img {
+  display: block;
+}
+
+.our-team-list-name {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: #212121;
+}
+
+.our-team-list-position {
+  margin-top: 0px;
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .our-team-list-item {
+    width: 270px;
+    padding-bottom: 24px;
+    background: #ffffff;
+    -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+            box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+    border-radius: 0px 0px 4px 4px;
+  }
+  .our-team-list-img {
+    display: block;
+  }
+  .our-team-list-name {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    color: #212121;
+  }
+  .our-team-list-position {
+    margin-top: 0px;
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+  }
+}
+
 /*.clients-list {
   display: flex;
   justify-content: space-between;
@@ -1142,6 +1332,6 @@ input {
 }
 
 .df {
-  width: 111px;
+  width: 11px;
 }
 /*# sourceMappingURL=main.css.map */
