--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -43,11 +43,19 @@ input {
 
 .section-header {
   margin-top: 0px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
 
   color: $title-light-theme-color;
+}
+
+@media screen and (min-width: 1200px) {
+  .section-header {
+    margin-bottom: 50px;
+
+    font-size: 36px;
+  }
 }
