--- a/sass/components/_about-us.scss
+++ b/sass/components/_about-us.scss
@@ -1,45 +1,96 @@
-/*.about-us-section {
+.about-us-section {
+  padding-top: 60px;
   padding-bottom: 0;
-}
-
-.about-us-list-header {
-  margin-top: 30px;
-  margin-bottom: 10px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-transform: uppercase;
-
-  color: $title-light-theme-color;
-}
-
-.about-us-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.about-us-list-item {
-  width: 270px;
-}
-
-.about-us-list-img-block {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 270px;
-  height: 120px;
-  background: #f5f4fa;
-  border-radius: 4px;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .about-us-icon {
   width: 70px;
   height: 70px;
 }
-.about-us-list-text {
-  margin-top: 0px;
-  margin-bottom: 0px;
+
+.about-us-list {
+  &-header {
+    margin-top: 30px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+
+    color: $title-light-theme-color;
+  }
+
+  &-img-block {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 120px;
+    background: #f5f4fa;
+    border-radius: 4px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  &-text {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 }
-*/
+@media screen and (min-width: 480px) {
+  .about-us-list {
+    &-item:not(:last-child) {
+      width: auto;
+      padding-bottom: 30px;
+    }
+
+    &-header {
+      text-align: center;
+    }
+  }
+}
+@media screen and (min-width: 768px) {
+  .about-us-list {
+    display: flex;
+    flex-wrap: wrap;
+    &-item {
+      width: 354px;
+    }
+    &-header {
+      text-align: start;
+    }
+
+    &-item:nth-child(2n-1) {
+      margin-right: 30px;
+    }
+    &-item:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about-us-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+
+    &-item {
+      width: 270px;
+      margin-right: 30px;
+    }
+    &-item:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &-img-block {
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      width: 270px;
+      height: 120px;
+      background: #f5f4fa;
+      border-radius: 4px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+}
