--- a/sass/components/_header-adress.scss
+++ b/sass/components/_header-adress.scss
@@ -41,45 +41,41 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .header-adress {
+    margin-left: auto;
+    &-list-item:not(:last-child) {
+      margin-bottom: 10px;
+    }
+    &-list {
+      display: flex;
+      flex-direction: column;
+
+      font-size: 12px;
+      line-height: 1.14;
+    }
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .header-adress {
     margin-left: auto;
 
     &-list {
       display: flex;
+      flex-direction: row;
 
-      font-weight: 400;
-      font-style: normal;
       font-size: 14px;
       line-height: 1.14;
-      letter-spacing: 0.02em;
-
-      fill: $text-light-theme-color;
     }
 
     &-list-item:not(:last-child) {
       margin-right: 30px;
-    }
-
-    &-list-icon {
-      width: 16px;
-      height: 16px;
-      fill: currentColor;
-      margin-right: 10px;
+      margin-bottom: 0px;
     }
 
     &-link {
-      display: flex;
       align-items: center;
-      color: $text-light-theme-color;
-
-      transition-property: color;
-      transition-duration: 250ms;
-    }
-
-    &-link:focus,
-    &-link:hover {
-      color: $accent-color;
     }
   }
 }
