--- a/sass/components/_header-navigation.scss
+++ b/sass/components/_header-navigation.scss
@@ -49,7 +49,7 @@
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .navigation {
     display: flex;
     align-items: center;
@@ -57,9 +57,12 @@
 
   .navigation-list {
     display: flex;
+    height: 80px;
     &-item:not(:last-child) {
       margin-right: 50px;
+      margin-bottom: 0px;
     }
+
     &-link {
       padding-top: 32px;
       padding-bottom: 0px;
@@ -69,28 +72,10 @@
     }
 
     &-link::after {
-      display: block;
       margin-top: 28px;
-      width: auto;
-      height: 4px;
-      background-color: $accent-color;
-      content: "";
-      border-radius: 2px;
-      opacity: 0;
-
-      transition-property: opacity;
-      transition-duration: 250ms;
-      transition-timing-function: $timing-function;
-    }
-
-    &-link:focus::after,
-    &-link:hover::after {
-      opacity: 1;
-    }
-
-    &-link:focus,
-    &-link:hover {
-      color: $accent-color;
     }
   }
+}
+
+@media screen and (min-width: 1200px) {
 }
