--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  align-content: center;
 
   padding-top: 10px;
   padding-bottom: 10px;
@@ -23,7 +24,7 @@
 
 .menu-wrapper {
   position: absolute;
-  transform: translateX(-100%);
+  transform: translateX(-200%);
   top: 100%;
   right: 0%;
   width: 100%;
@@ -36,6 +37,9 @@
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: $timing-function;
+
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
 }
 
 .menu-wrapper.is-open {
@@ -63,6 +67,15 @@
 }
 
 @media screen and (min-width: 768px) {
+  .header-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    align-content: center;
+
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
   .navigation {
     display: flex;
   }
