--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,51 +1,116 @@
-/*.navigation {
-  display: flex;
-  align-items: center;
-}
+.hero {
+  height: 400px;
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 
-.navigation-list {
-  display: flex;
-  &-item:not(:last-child) {
-    margin-right: 50px;
-  }
-  &-link {
-    padding-top: 32px;
-    padding-bottom: 0px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  background-image: linear-gradient(
+    rgba(47, 48, 58, 0.8),
+    rgba(47, 48, 58, 0.8)
+  );
 
-    color: $title-light-theme-color;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: black;
 
-    transition-property: color, background-color;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
-  }
+  &-title {
+    margin: 0px;
+    padding-top: 118px;
+    padding-bottom: 30px;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.62;
 
-  &-link::after {
-    display: block;
-    margin-top: 28px;
-    width: auto;
-    height: 4px;
-    background-color: $accent-color;
-    content: "";
-    border-radius: 2px;
-    opacity: 0;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 
-    transition-property: opacity;
-    transition-duration: 250ms;
-    transition-timing-function: $timing-function;
-  }
-
-  &-link:focus::after,
-  &-link:hover::after {
-    opacity: 1;
-  }
-
-  &-link:focus,
-  &-link:hover {
-    color: $accent-color;
+    color: $title-dark-theme-color;
   }
 }
-*/
+
+@media screen and (min-width: 480px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-mobile.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx),
+  screen and (min-width: 480px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-mobile@2x.jpg);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 400px;
+
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-tablet.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
+  }
+}
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx),
+  screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-tablet@2x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
+
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-desktop.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: black;
+
+    &-title {
+      padding-top: 200px;
+
+      font-size: 44px;
+      line-height: 1.36;
+    }
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx),
+  screen and (min-width: 1208px) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.8),
+        rgba(47, 48, 58, 0.8)
+      ),
+      url(../images/hero-desktop@2x.jpg);
+  }
+}
