--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./components/header";
 @import "./components/header-navigation";
 @import "./components/header-adress";
+@import "./base/active-page";
 @import "./components/hero";
 @import "./components/about-us";
 @import "./components/what-we-do";
@@ -17,5 +18,5 @@
 @import "./components/portfolio";
 
 .df {
-  width: 111px;
+  width: 11px;
 }
