--- a/css/main.css
+++ b/css/main.css
@@ -464,7 +464,7 @@ input {
   color: #ffffff;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-mobile.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-mobile.jpg);
@@ -474,7 +474,7 @@ input {
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-width: 480px) {
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-width: 320px) {
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url(../images/hero-mobile@2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url(../images/hero-mobile@2x.jpg);
@@ -567,7 +567,6 @@ input {
 
 @media screen and (min-width: 480px) {
   .about-us-list-item:not(:last-child) {
-    width: auto;
     padding-bottom: 30px;
   }
   .about-us-list-header {
@@ -639,6 +638,11 @@ input {
 }
 
 @media screen and (min-width: 1200px) {
+  .what-we-do {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   .what-we-do-list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -722,6 +726,10 @@ input {
   height: 20px;
 }
 
+.our-team {
+  background: #f5f4fa;
+}
+
 .our-team-list-item {
   max-width: 480px;
   padding-bottom: 24px;
@@ -754,76 +762,126 @@ input {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .our-team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .our-team-list-item {
+    width: 354px;
+  }
+  .our-team-list-item:nth-child(2n-1) {
+    margin-right: 30px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .our-team-list {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
   }
   .our-team-list-item {
     width: 270px;
-    padding-bottom: 24px;
-    background: #ffffff;
-    -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-            box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-    border-radius: 0px 0px 4px 4px;
   }
-  .our-team-list-img {
-    display: block;
+  .our-team-list-item:not(:last-child) {
+    margin-right: 30px;
   }
-  .our-team-list-name {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    color: #212121;
-  }
-  .our-team-list-position {
-    margin-top: 0px;
-    margin-bottom: 16px;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-  }
-}
-
-/*.clients-list {
-  display: flex;
-  justify-content: space-between;
 }
 
 .clients-list-link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 170px;
   height: 90px;
-
   color: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-
+  -webkit-transition-property: color, border;
   transition-property: color, border;
-  transition-duration: 250ms;
-  transition-timing-function: $timing-function;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-  &-icon {
-    fill: currentColor;
+.clients-list-link-icon {
+  fill: currentColor;
+}
+
+.clients-list-link-icon:focus, .clients-list-link-icon:hover {
+  fill: #2196f3;
+}
+
+.clients-list-link:hover, .clients-list-link:focus {
+  border: 1px solid #2196f3;
+  fill: #2196f3;
+  cursor: pointer;
+}
+
+.clients-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.clients-list-item:nth-child(2n-1) {
+  margin-right: 30px;
+}
+
+.clients-list-item {
+  margin-bottom: 30px;
+}
+
+.clients-list-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .clients-list .clients-list-item {
+    margin-right: 30px;
   }
-
-  &:hover,
-  &:focus {
-    border: 1px solid $accent-color;
-    fill: $accent-color;
-    cursor: pointer;
+  .clients-list .clients-list-item:nth-child(3n) {
+    margin-right: 0;
   }
 }
-*/
+
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .clients-list-item {
+    margin: 0px;
+  }
+}
+
 /*.footer {
   background: #2f303a;
   .footer-container {
