--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,8 +1,3 @@
-/*.clients-list {
-  display: flex;
-  justify-content: space-between;
-}
-
 .clients-list-link {
   display: inline-flex;
   align-items: center;
@@ -21,6 +16,10 @@
   &-icon {
     fill: currentColor;
   }
+  &-icon:focus,
+  &-icon:hover {
+    fill: $accent-color;
+  }
 
   &:hover,
   &:focus {
@@ -29,4 +28,38 @@
     cursor: pointer;
   }
 }
-*/
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  &-item:nth-child(2n-1) {
+    margin-right: 30px;
+  }
+  &-item {
+    margin-bottom: 30px;
+  }
+  &-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 768px) {
+    .clients-list {
+      &-item {
+        margin-right: 30px;
+      }
+      &-item:nth-child(3n) {
+        margin-right: 0;
+      }
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients-list {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    &-item {
+      margin: 0px;
+    }
+  }
+}
