--- a/sass/components/_our_team.scss
+++ b/sass/components/_our_team.scss
@@ -37,7 +37,9 @@
     height: 20px;
   }
 }
-
+.our-team {
+  background: #f5f4fa;
+}
 .our-team-list {
   &-item {
     max-width: 480px;
@@ -73,42 +75,30 @@
     text-align: center;
   }
 }
+@media screen and (min-width: 768px) {
+  .our-team-list {
+    display: flex;
+    flex-wrap: wrap;
+    &-item {
+      width: 354px;
+    }
+    &-item:nth-child(2n-1) {
+      margin-right: 30px;
+    }
+  }
+}
 @media screen and (min-width: 1200px) {
   .our-team-list {
     display: flex;
+    flex-wrap: nowrap;
     justify-content: space-between;
 
     &-item {
       width: 270px;
-      padding-bottom: 24px;
-      background: #ffffff;
-      box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2),
-        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-      border-radius: 0px 0px 4px 4px;
     }
 
-    &-img {
-      display: block;
-    }
-    &-name {
-      margin-top: 30px;
-      margin-bottom: 10px;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.19;
-
-      text-align: center;
-
-      color: $title-light-theme-color;
-    }
-
-    &-position {
-      margin-top: 0px;
-      margin-bottom: 16px;
-      font-size: 16px;
-      line-height: 1.19;
-
-      text-align: center;
+    &-item:not(:last-child) {
+      margin-right: 30px;
     }
   }
 }
